[package]
name = "adsmt-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metacrate for adsmt — re-exports every adsmt-* and lu-* crate under one umbrella, plus feature flags for distro packaging (Arch / Debian / Ubuntu / Devuan / Knoppix). v1.0.0-rc.1 RC1.5 per 21E.2 option 2-A'."

[dependencies]
# adsmt core stack — always pulled in by `default` and `full`.
adsmt-core.workspace = true
adsmt-cert.workspace = true
adsmt-theory.workspace = true
adsmt-class = { path = "../adsmt-class" }
adsmt-quant = { path = "../adsmt-quant" }
adsmt-abduce = { path = "../adsmt-abduce" }
adsmt-engine.workspace = true
adsmt-parser.workspace = true
adsmt-heuristic-checker = { path = "../adsmt-heuristic-checker", optional = true }
adsmt-heuristic-checker-macros = { path = "../adsmt-heuristic-checker-macros", optional = true }
adsmt-lints = { path = "../adsmt-lints", optional = true }
adsmt-ffi = { path = "../adsmt-ffi", optional = true }

# logicutils stack (absorbed in RC1.4.A).
lu-common.workspace = true
freshcheck = { path = "../freshcheck", optional = true }
stamp = { path = "../stamp", optional = true }
lu-match = { path = "../lu-match", optional = true }
lu-expand = { path = "../lu-expand", optional = true }
lu-query = { path = "../lu-query", optional = true }
lu-rule = { path = "../lu-rule", optional = true }
lu-queue = { path = "../lu-queue", optional = true }
lu-par = { path = "../lu-par", optional = true }
lu-deps = { path = "../lu-deps", optional = true }
lu-multi = { path = "../lu-multi", optional = true }
logicutils-translator-to-oxiz-sat = { path = "../logicutils-translator-to-oxiz-sat", optional = true }

[features]
# Default: the library-side surface only — no CLI binaries get
# pulled in but every library crate is reachable through the
# `adsmt_meta::*` re-export.
default = ["no-cli"]

# `no-cli` — library only. Compatible with embedders that just
# want the SMT solver + cert format from a single dependency.
no-cli = []

# `only-cli` — exposes the legacy `lu-*` CLI binaries
# (freshcheck, stamp, lu-match, lu-expand, lu-query, lu-rule,
# lu-queue, lu-par, lu-deps, lu-multi) without the heavyweight
# library surface. Used by distro packagers who want a
# `logicutils-cli` follow-up package.
only-cli = [
    "freshcheck",
    "stamp",
    "lu-match",
    "lu-expand",
    "lu-query",
    "lu-rule",
    "lu-queue",
    "lu-par",
    "lu-deps",
    "lu-multi",
]

# `full` — everything: library + every CLI + the optional
# adsmt-side extension crates (heuristic checker, lints, ffi).
# This is what the Arch/Debian `adsmt-meta` distro package
# resolves to.
full = [
    "only-cli",
    "logicutils-translator-to-oxiz-sat",
    "adsmt-heuristic-checker",
    "adsmt-heuristic-checker-macros",
    "adsmt-lints",
    "adsmt-ffi",
]
