[package]
name = "adsmt-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SMT-LIB v2 parser/emitter and lu-kb surface parser"

[dependencies]
adsmt-core.workspace = true
thiserror.workspace = true
indexmap.workspace = true
# Path dependency on the workspace-excluded logicutils submodule.
# `lu-common::kb` provides the authoritative lu-kb parser.
lu-common = { version = "=1.0.0-rc.21", path = "../lu-common", default-features = false }
adsmt-heuristic-checker-macros = { version = "=1.0.0-rc.21", path = "../adsmt-heuristic-checker-macros" }
