[package]
name = "adsmt-theory-finite-field"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GF(2) Gröbner-basis theory sibling for adsmt — Buchberger (dense) + F4 (bit-packed) backends + FiniteFieldTheory plugin certifying UNSAT via Hilbert Weak Nullstellensatz"

[dependencies]
smallvec.workspace = true
# Theory trait + Combination polite-combination glue.  Adding
# the dep here keeps the §3.4 plugin self-contained: the crate
# both ships the GF(2) Gröbner kernel *and* its Theory impl,
# so `Solver::with_finite_field(...)` only needs to import from
# one place.
adsmt-theory.workspace = true
adsmt-core.workspace = true
adsmt-cert.workspace = true
