[package]
name = "freshcheck"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File freshness checking for logicutils"

[dependencies]
lu-common = { workspace = true }
stamp = { version = "=1.0.0-rc.7-1", path = "../stamp" }
clap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
