[package]
name = "lu-rule"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pattern rule matching with backtracking for logicutils"

[dependencies]
lu-common = { workspace = true }
lu-match = { version = "=1.0.0-rc.7-1", path = "../lu-match" }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
