[package]
name = "adsmt-emit-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The language-neutral emitter contract: the WIT world every adsmt emitter package implements, plus its host-side Rust mirror types."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
