[package]
name = "adsmt-emit-pm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pnpm-style local package manager for adsmt emitter packages: project manifest, lockfile, content-addressed store, and resolver. Artifact-agnostic (manages opaque sha256-addressed bytes)."

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
semver = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27"
