[package]
name = "adsmt-emit-pm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pnpm-style local package manager for adsmt emitter packages: project manifest, lockfile, content-addressed store, and resolver. Artifact-agnostic (manages opaque sha256-addressed bytes)."

[dependencies]
adsmt-emit-contract = { path = "../adsmt-emit-contract" }
serde = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
semver = { workspace = true }
thiserror.workspace = true
# Redistributable package archive: tar of the `contents/` tree,
# compressed by a pluggable codec (zstd default; bzip4 is the
# in-development local alternative).
tar = "0.4"
zstd = "0.13"
# Per-build staging roots ($srcdir/$pkgdir), cleaned on drop.
tempfile = "3.27"
