[package]
name = "adsmt-emit-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The dedicated emitter runtime: resolves a target to its package and executes it. Script tier (shebang subprocess) wired; Wasm tier (wasmtime) is the next backend."

[dependencies]
adsmt-emit-contract = { path = "../adsmt-emit-contract" }
adsmt-emit-pm = { path = "../adsmt-emit-pm" }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27"
