[package]
name = "adsmt-emit-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The dedicated emitter runtime: resolves a target to its package and executes it. Script tier (shebang subprocess) wired; Wasm tier (wasmtime) is the next backend."

[dependencies]
adsmt-emit-contract = { path = "../adsmt-emit-contract" }
adsmt-emit-pm = { path = "../adsmt-emit-pm" }
thiserror.workspace = true
# The sole runtime backend: pure-Rust wasmi interpreter + WASI
# Preview 1. cert on stdin → prover text on stdout. No Cranelift /
# C toolchain.
wasmi = "1"
wasmi_wasi = "1"

[dev-dependencies]
tempfile = "3.27"
# Assemble tiny WASI Preview 1 modules from WAT for the backend
# tests without needing an external wasm toolchain.
wat = "1"
