[package]
name = "adsmt-parser-lfsc-drat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure proof-format parsers: LFSC byte-stream reader + DRAT proof representation/parser. No internal dependencies."

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
# Serde derives for the DRAT proof representation (carried by
# adsmt-cert's TheoryWitness::Drat).
serde = ["dep:serde"]
